examples/test/testpolicy2667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2667
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key9: value22
      key10: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value19
      podSelector:
        matchLabels:
          key2: value35
          key8: value39
